--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <project>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.uniol.inf.is.odysseus</groupId>
-	<artifactId>de.uniol.inf.is.odysseus.releng</artifactId>
+	<artifactId>de.uniol.inf.is.odysseus.odysseus_dev</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<parent>
 		<groupId>de.uniol.inf.is.odysseus</groupId>
-		<artifactId>de.uniol.inf.is.odysseus.root</artifactId>
+		<artifactId>de.uniol.inf.is.odysseus</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
