--- a/targetplatform/pom.xml
+++ b/targetplatform/pom.xml
@@ -1,15 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+
+<project>
     <modelVersion>4.0.0</modelVersion>
- 	<parent>
-		<groupId>de.uniol.inf.is.odysseus.odysseus_dev</groupId>
+ <parent>
+		<groupId>de.uniol.inf.is.odysseus</groupId>
 		<artifactId>de.uniol.inf.is.odysseus.odysseus_dev</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		
 	</parent>
-    <groupId>de.uniol.inf.is.odysseus.platform</groupId>
+    <groupId>de.uniol.inf.is.odysseus</groupId>
     <artifactId>platform</artifactId>
-
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>eclipse-target-definition</packaging>
 
 </project>
