--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,26 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<modules>
-		<module>targetplatform</module>	
-		<!-- uncomment the following line to build products -->
-		<!-- <module>products</module> -->	
-	</modules>
+	<profiles>
+		<profile>
+			<id>product</id>
+			<modules>
+				<module>targetplatform</module>	
+				<module>products</module>
+			</modules>
+		</profile>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<modules>
+				<module>targetplatform</module>	
+			</modules>
+		</profile>
+
+	</profiles>
+
 
 </project>
 
