Less duplicate code

--- a/de.uniol.inf.is.odysseus.tycho.configuration/pom.xml
+++ b/de.uniol.inf.is.odysseus.tycho.configuration/pom.xml
@@ -12,12 +12,9 @@
 		<targetfilename>platform_master_all</targetfilename>
 	</properties>
 
-	<profiles>
-		<profile>
-			<id>currentOS</id>
-			<build>
-				<plugins>
-					<plugin>
+	<build>
+		<plugins>
+				<plugin>
 						<groupId>org.eclipse.tycho</groupId>
 						<artifactId>tycho-maven-plugin</artifactId>
 						<version>${tycho.version}</version>
@@ -37,6 +34,15 @@
 							</execution>
 						</executions>
 					</plugin>
+
+		</plugins>
+	</build>
+	
+	<profiles>
+		<profile>
+			<id>currentOS</id>
+			<build>
+				<plugins>
 					<plugin>
 						<groupId>org.eclipse.tycho</groupId>
 						<artifactId>target-platform-configuration</artifactId>
@@ -64,26 +70,6 @@
 			</activation>
 			<build>
 				<plugins>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-maven-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<extensions>true</extensions>
-					</plugin>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-packaging-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<id>package-feature</id>
-								<configuration>
-									<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
 					<plugin>
 						<groupId>org.eclipse.tycho</groupId>
 						<artifactId>target-platform-configuration</artifactId>
