Test product, own folder, maven profile: test

--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,18 @@
 	<modules>
 		<module>targetplatform</module>	
 	</modules>
-	
+
 	<profiles>
 		<profile>
 			<id>product</id>
 			<modules>
 				<module>products</module>
+			</modules>
+		</profile>
+		<profile>
+			<id>test</id>
+			<modules>
+				<module>test</module>
 			</modules>
 		</profile>
 	</profiles>
