--- a/test/pom.xml
+++ b/test/pom.xml
@@ -3,7 +3,7 @@
 
 	<parent>
 		<groupId>de.uniol.inf.is.odysseus</groupId>
-		<artifactId>de.uniol.inf.is.odysseus.odysseus_dev.products</artifactId>
+		<artifactId>de.uniol.inf.is.odysseus.odysseus_dev</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
