New features for client and server starter (removed from c|s-platform.feature)

--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -13,6 +13,8 @@
 	<modules>
 		<module>client.starter</module>	
 		<module>server.starter</module>	
+		<module>client.starter.feature</module>	
+		<module>server.starter.feature</module>	
 	</modules>
 
 </project>
