--- a/de.uniol.inf.is.odysseus.tycho.configuration/pom.xml
+++ b/de.uniol.inf.is.odysseus.tycho.configuration/pom.xml
@@ -8,36 +8,272 @@
 	<packaging>pom</packaging>
 	<properties>
 		<tycho.version>1.2.0</tycho.version>
+		<tycho.extras.version>${tycho.version}</tycho.extras.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<targetfilename>platform_master_all</targetfilename>
 	</properties>
 
 	<build>
 		<plugins>
-				<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-maven-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<extensions>true</extensions>
-					</plugin>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-packaging-plugin</artifactId>
-						<version>${tycho.version}</version>
-						<executions>
-							<execution>
-								<phase>package</phase>
-								<id>package-feature</id>
-								<configuration>
-									<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
+		<!--	<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-source-feature-plugin</artifactId>
+				<version>${tycho.extras.version}</version>
+
+				<executions>
+					<execution>
+						<id>source-feature</id>
+						<phase>package</phase>
+						<goals>
+							<goal>source-feature</goal>
+						</goals>
+						<configuration>
+							<excludes>
+								<feature id="de.uniol.inf.is.odysseus.common.feature"/>
+								<feature id="de.uniol.inf.is.odysseus.slf4j.feature"/>
+								<feature id="ANTLR3_4.feature"/>
+								<feature id="aopalliance.feature"/>
+								<feature id="argparse4j.feature"/>
+								<feature id="com.fasterxml.jackson.feature"/>
+								<feature id="com.google.code.gson.feature"/>
+								<feature id="com.google.guava.feature"/>
+								<feature id="com.google.guava20.feature"/>
+								<feature id="com.google.protobuf.feature"/>
+								<feature id="com.googlecode.javacv.feature"/>
+								<feature id="com.jaxb.feature"/>
+								<feature id="com.jayway.jsonpath.feature"/>
+								<feature id="com.jogamp.jogl.feature"/>
+								<feature id="com.mongodb.driver.feature"/>
+								<feature id="com.rabbitmq.feature"/>
+								<feature id="com.rits.cloning.feature"/>
+								<feature id="com.vividsolutions.jts.feature"/>
+								<feature id="com.yammer.metrics.feature"/>
+								<feature id="Commons.Math.feature"/>
+								<feature id="de.uniol.inf.ei.oj104.feature"/>
+								<feature id="de.uniol.inf.is.jfreechart.feature"/>
+								<feature id="org.openmuc.jdlms.feature"/>
+								<feature id="sigar.feature"/>
+								<feature id="fastutil.feature"/>
+								<feature id="hk2.feature"/>
+								<feature id="io.netty.feature"/>
+								<feature id="jama.feature"/>
+								<feature id="javaparser.feature"/>
+								<feature id="javax.mail.feature"/>
+								<feature id="javax.validation.feature"/>
+								<feature id="jna.feature"/>
+								<feature id="joptsimple.feature"/>
+								<feature id="lz4.feature"/>
+								<feature id="net.ericaro.surfaceplotter.feature"/>
+								<feature id="net.java.jersey.feature"/>
+								<feature id="org.antlr4.feature"/>
+								<feature id="org.apache.commons.configuration.feature"/>
+								<feature id="org.apache.commons.io.feature"/>
+								<feature id="org.apache.commons.lang.feature"/>
+								<feature id="org.apache.commons.lang3.feature"/>
+								<feature id="org.apache.commons.math3.feature"/>
+								<feature id="org.apache.commons.net.feature"/>
+								<feature id="org.apache.derby.feature"/>
+								<feature id="org.apache.hadoop.feature"/>
+								<feature id="org.apache.hc.feature"/>
+								<feature id="org.slf4j_0.feature"/>
+								<feature id="org.apache.jena.2.13.feature"/>
+								<feature id="org.apache.jlibs.feature"/>
+								<feature id="org.apache.kafka.feature"/>
+								<feature id="org.apache.mahout.feature"/>
+								<feature id="org.apache.tika.core.feature"/>
+								<feature id="org.apache.tika.bundle.feature"/>
+								<feature id="org.apache.tika.parsers.feature"/>
+								<feature id="org.apache.zookeeper.feature"/>
+								<feature id="org.bytedeco.javacv.feature"/>
+								<feature id="org.codehaus.woodstox.stax2-api.feature"/>
+								<feature id="org.eclipse.nebula.feature"/>
+								<feature id="org.eclipse.paho.client.mqttv3.feature"/>
+								<feature id="org.eclipse.pde.feature"/>
+								<feature id="com.google.inject.feature"/>
+								<feature id="org.objectweb.asm.feature"/>
+								<feature id="org.apache.log4j.feature"/>
+								<feature id="org.antlr.runtime.feature"/>
+								<feature id="org.eclipse.xpand.feature"/>
+								<feature id="org.eclipse.xtend.feature"/>
+								<feature id="org.eclipse.emf.mwe.core.feature"/>
+								<feature id="org.eclipse.xtend.typesystem.emf.feature"/>
+								<feature id="org.apache.commons.cli.feature"/>
+								<feature id="org.eclipse.emf.mwe.utils.feature"/>
+								<feature id="org.elasticsearch.driver.feature"/>
+								<feature id="org.geotools.feature"/>
+								<feature id="org.graphstream.gs-algo.feature"/>						
+								<feature id="org.graphstream.gs-core.feature"/>
+								<feature id="org.i0itec.zkclient.feature"/>
+								<feature id="org.java-websocket.feature"/>
+								<feature id="org.jboss.javassist.feature"/>
+								<feature id="org.jboss.netty.feature"/>
+								<feature id="org.jnetpcap.feature"/>
+								<feature id="org.jpmml.feature"/>
+								<feature id="org.json.feature"/>
+								<feature id="org.mihalis.opal.feature"/>
+								<feature id="org.objenesis.feature"/>
+								<feature id="org.ocpsoft.prettytime.feature"/>
+								<feature id="org.openmuc.jdlms.feature"/>
+								<feature id="org.OpenNI.feature"/>
+								<feature id="org.osgeo.proj4j.feature"/>
+								<feature id="org.renjin.feature"/>
+								<feature id="org.restlet-osgi-2.3.12.feature"/>
+								<feature id="org.scala-lang.scala.feature"/>
+								<feature id="org.sesame.feature"/>
+								<feature id="org.simpleframework.xml.feature"/>
+								<feature id="org.xerial.snappy-java.feature"/>
+								<feature id="qdox.feature"/>
+								<feature id="rxtx.feature"/>
+								<feature id="TestNG6.8.feature"/>
+								<feature id="javax.xml.feature"/> 
+								<feature id="javax.xml.ws.feature"/> 
+								<feature id="javax.xml.soap.feature"/> 
+								<feature id="javax.xml.stream.feature"/>
+								<feature id="org.codehaus.woodstox.stax2.api.feature"/>
+								
+								<plugin id="de.uniol.inf.is.odysseus.slf4j"/>
+								<plugin id="ANTLR3_4"/>
+								<plugin id="aopalliance"/>
+								<plugin id="argparse4j"/>
+								<plugin id="com.fasterxml.jackson"/>
+								<plugin id="com.google.code.gson"/>
+								<plugin id="com.google.guava"/>
+								<plugin id="com.google.guava20"/>
+								<plugin id="com.google.protobuf"/>
+								<plugin id="com.googlecode.javacv"/>
+								<plugin id="com.jaxb"/>
+								<plugin id="com.jayway.jsonpath"/>
+								<plugin id="com.jogamp.jogl"/>
+								<plugin id="com.mongodb.driver"/>
+								<plugin id="com.rabbitmq"/>
+								<plugin id="com.rits.cloning"/>
+								<plugin id="com.vividsolutions.jts"/>
+								<plugin id="com.yammer.metrics"/>
+								<plugin id="Commons.Math"/>
+								<plugin id="de.uniol.inf.ei.oj104"/>
+								<plugin id="de.uniol.inf.is.jfreechart"/>
+								<plugin id="org.openmuc.jdlms"/>
+								<plugin id="sigar"/>
+								<plugin id="fastutil"/>
+								<plugin id="hk2"/>
+								<plugin id="io.netty"/>
+								<plugin id="jama"/>
+								<plugin id="javaparser"/>
+								<plugin id="javax.mail"/>
+								<plugin id="javax.validation"/>
+								<plugin id="jna"/>
+								<plugin id="joptsimple"/>
+								<plugin id="lz4"/>
+								<plugin id="net.ericaro.surfaceplotter"/>
+								<plugin id="net.java.jersey"/>
+								<plugin id="org.antlr4"/>
+								<plugin id="org.apache.commons.configuration"/>
+								<plugin id="org.apache.commons.io"/>
+								<plugin id="org.apache.commons.lang"/>
+								<plugin id="org.apache.commons.lang3"/>
+								<plugin id="org.apache.commons.math3"/>
+								<plugin id="org.apache.commons.net"/>
+								<plugin id="org.apache.derby"/>
+								<plugin id="org.apache.hadoop"/>
+								<plugin id="org.apache.hc"/>
+								<plugin id="org.slf4j_0"/>
+								<plugin id="org.apache.jena.2.13"/>
+								<plugin id="org.apache.jlibs"/>
+								<plugin id="org.apache.kafka"/>
+								<plugin id="org.apache.mahout"/>
+								<plugin id="org.apache.tika.core"/>
+								<plugin id="org.apache.tika.bundle"/>
+								<plugin id="org.apache.tika.parsers"/>
+								<plugin id="org.apache.zookeeper"/>
+								<plugin id="org.bytedeco.javacv"/>
+								<plugin id="org.codehaus.woodstox.stax2-api"/>
+								<plugin id="org.eclipse.nebula"/>
+								<plugin id="org.eclipse.paho.client.mqttv3"/>
+								<plugin id="org.eclipse.pde"/>
+								<plugin id="com.google.inject"/>
+								<plugin id="org.objectweb.asm"/>
+								<plugin id="org.apache.log4j"/>
+								<plugin id="org.antlr.runtime"/>
+								<plugin id="org.eclipse.xpand"/>
+								<plugin id="org.eclipse.xtend"/>
+								<plugin id="org.eclipse.emf.mwe.core"/>
+								<plugin id="org.eclipse.xtend.typesystem.emf"/>
+								<plugin id="org.apache.commons.cli"/>
+								<plugin id="org.eclipse.emf.mwe.utils"/>
+								<plugin id="org.elasticsearch.driver"/>
+								<plugin id="org.geotools"/>
+								<plugin id="org.graphstream.gs-algo"/>						
+								<plugin id="org.graphstream.gs-core"/>
+								<plugin id="org.i0itec.zkclient"/>
+								<plugin id="org.java-websocket"/>
+								<plugin id="org.jboss.javassist"/>
+								<plugin id="org.jboss.netty"/>
+								<plugin id="org.jnetpcap"/>
+								<plugin id="org.jpmml"/>
+								<plugin id="org.json"/>
+								<plugin id="org.mihalis.opal"/>
+								<plugin id="org.objenesis"/>
+								<plugin id="org.ocpsoft.prettytime"/>
+								<plugin id="org.openmuc.jdlms"/>
+								<plugin id="org.OpenNI"/>
+								<plugin id="org.osgeo.proj4j"/>
+								<plugin id="org.renjin"/>
+								<plugin id="org.restlet-osgi-2.3.12"/>
+								<plugin id="org.scala-lang.scala"/>
+								<plugin id="org.sesame"/>
+								<plugin id="org.simpleframework.xml"/>
+								<plugin id="org.xerial.snappy-java"/>
+								<plugin id="qdox"/>
+								<plugin id="rxtx"/>
+								<plugin id="TestNG6.8"/>
+								<plugin id="javax.xml"/> 
+								<plugin id="javax.xml.ws"/> 
+								<plugin id="javax.xml.soap"/> 
+								<plugin id="javax.xml.stream"/>
+							</excludes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin> -->
+
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-source-plugin</artifactId>
+				<version>${tycho.version}</version>
+
+				<executions>
+					<execution>
+						<id>plugin-source</id>
+						<goals>
+							<goal>plugin-source</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-packaging-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<id>package-feature</id>
+						<configuration>
+							<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 		</plugins>
 	</build>
-	
+
 	<profiles>
 		<profile>
 			<id>currentOS</id>
@@ -56,7 +292,6 @@
 									<classifier>${targetfilename}</classifier>
 								</artifact>
 							</target>
-							<targetDefinitionIncludeSource>honor</targetDefinitionIncludeSource>				
 						</configuration>
 					</plugin>
 
