--- a/de.uniol.inf.is.odysseus.tycho.configuration/pom.xml
+++ b/de.uniol.inf.is.odysseus.tycho.configuration/pom.xml
@@ -246,9 +246,9 @@
 						<feature id="org.eclipse.zest"/>
 						
 						<!-- needs further investigations -->
-						<feature id="ode.uniol.inf.is.odysseus.xtext.feature"/>
+						<feature id="de.uniol.inf.is.odysseus.xtext.feature"/>
 						<feature id="org.restlet.osgi.2.3.12.feature"/>
-						<feature id="de.uniol.inf.is.odysseus.wrapper.actisense"/>
+						<plugin id="de.uniol.inf.is.odysseus.wrapper.actisense"/>
 					</excludes>
 				</configuration>
 			</plugin>
