--- a/de.uniol.inf.is.odysseus.tycho.configuration/pom.xml
+++ b/de.uniol.inf.is.odysseus.tycho.configuration/pom.xml
@@ -55,6 +55,7 @@
 						<plugin id="de.uniol.inf.is.jfreechart"/>
 						<plugin id="de.uniol.inf.is.odysseus.common.resources.jdlms.feature"/>
 						<plugin id="de.uniol.inf.is.odysseus.sigar"/>
+						<plugin id="de.uniol.inf.is.odysseus.slf4j"/>
 						<plugin id="de.uniol.inf.is.odysseus.xtext.feature"/>
 						<plugin id="fastutil"/>
 						<plugin id="fr.bmartel.pcapdecoder"/>
