Added new debug files

--- a/de.uniol.inf.is.odysseus.slf4j/build.properties
+++ b/de.uniol.inf.is.odysseus.slf4j/build.properties
@@ -3,5 +3,7 @@ bin.includes = META-INF/,\
                src/,\
                log4j2.test.xml,\
                log4j2.xml,\
-               lib/
+               lib/,\
+               log4j2.debug.xml,\
+               log4j2.trace.xml
 source.. = src/
