--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>de.uniol.inf.is.odysseus</groupId>
 	<artifactId>de.uniol.inf.is.odysseus.odysseus_dev</artifactId>
 	<packaging>pom</packaging>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>de.uniol.inf.is.odysseus.tycho</groupId>
