--- a/de.uniol.inf.is.odysseus.slf4j/build.properties
+++ b/de.uniol.inf.is.odysseus.slf4j/build.properties
@@ -2,8 +2,9 @@ bin.includes = META-INF/,\
                log4j.test.properties,\
                src/,\
                log4j2.test.xml,\
-               log4j2.xml,\
+               log4j2_.xml,\
                lib/,\
-               log4j2.debug.xml,\
-               log4j2.trace.xml
+               log4j2.xml,\
+               log4j2.trace.xml,\
+               lib/slf4j-simple-1.7.25.jar
 source.. = src/
