--- a/de.uniol.inf.is.odysseus.slf4j/.classpath
+++ b/de.uniol.inf.is.odysseus.slf4j/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-simple-1.7.25.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-core-2.11.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2-api-2.11.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-api-2.11.1.jar"/>
