SLF4J Config is now added in the products (less dependency problems)

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
 	<modules>
 	    <module>de.uniol.inf.is.odysseus.slf4j</module>
+		<module>de.uniol.inf.is.odysseus.slf4j.feature</module>
 		<module>targetplatform</module>	
 		<module>starter</module>
 	</modules>
