--- a/de.uniol.inf.is.odysseus.slf4j/build.properties
+++ b/de.uniol.inf.is.odysseus.slf4j/build.properties
@@ -2,9 +2,12 @@ bin.includes = META-INF/,\
                log4j.test.properties,\
                src/,\
                log4j2.test.xml,\
-               log4j2.xml,\
+               log4j2.orig.xml,\
                lib/,\
-               log4j2.debug.xml,\
+               log4j2.xml,\
                log4j2.trace.xml,\
-               lib/slf4j-simple-1.7.25.jar
+               lib/log4j-api-2.14.1.jar,\
+               lib/log4j-core-2.14.1.jar,\
+               lib/log4j-slf4j-impl-2.14.1.jar,\
+               lib/slf4j-api-1.7.25.jar
 source.. = src/
