--- a/de.uniol.inf.is.odysseus.slf4j/build.properties
+++ b/de.uniol.inf.is.odysseus.slf4j/build.properties
@@ -4,5 +4,9 @@ bin.includes = META-INF/,\
                log4j2.xml,\
                log4j2.debug.xml,\
                log4j2.trace.xml,\
-               lib/
+               lib/,\
+               log4j2.file.debug.xml,\
+               log4j2.file.trace.xml,\
+               log4j2.file.xml,\
+               lib/log4j-slf4j18-impl-2.14.1.jar
 source.. = src/
