--- a/de.uniol.inf.is.odysseus.slf4j/.classpath
+++ b/de.uniol.inf.is.odysseus.slf4j/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-slf4j18-impl-2.14.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-api-2.14.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-core-2.14.1.jar"/>
