Slf4j update to 2.17

--- a/de.uniol.inf.is.odysseus.slf4j/build.properties
+++ b/de.uniol.inf.is.odysseus.slf4j/build.properties
@@ -8,8 +8,8 @@ bin.includes = META-INF/,\
                log4j2.file.debug.xml,\
                log4j2.file.trace.xml,\
                log4j2.file.xml,\
-               lib/log4j-api-2.15.0.jar,\
-               lib/log4j-core-2.15.0.jar,\
-               lib/log4j-slf4j-impl-2.15.0.jar,\
-               lib/slf4j-api-1.7.32.jar
+               lib/slf4j-api-1.7.32.jar,\
+               lib/log4j-api-2.17.0.jar,\
+               lib/log4j-core-2.17.0.jar,\
+               lib/log4j-slf4j-impl-2.17.0.jar
 source.. = src/
